kubernetes/management/traefik/manifests/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: traefik
  name: traefik-dashboard-ingress
  annotations:
    external-dns.kubernetes.io/target: 192.168.10.20
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.kalexlab.xyz`)
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
      services:
        - kind: TraefikService
          name: api@internal
  tls:
    secretName: traefik-ingress-certificate-secret
